# platform.upstream.libnsbmp

./: Makefile.am  autogen.sh  configure.ac  project.config
include/: libnsbmp.h
packaging/: libnsbmp.spec
src/: Makefile.am  libnsbmp.c
